@@ -7,6 +7,6 @@ KEYWORDS=~amd64 ~x86
 LICENSE=ipw3945
 RDEPEND=!sys-kernel/linux-firmware[-savedconfig]
 SLOT=10
-SRC_URI=http://wireless.kernel.org/en/users/Drivers/iwlwifi?action=AttachFile&do=get&target=iwlwifi-7265-ucode-23.13.10.0.tgz -> iwl7265-ucode-0.10.13.23.tgz
+SRC_URI=https://wireless.wiki.kernel.org/_media/en/users/drivers/iwlwifi-7265-ucode-23.13.10.0.tgz -> iwl7265-ucode-0.10.13.23.tgz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=6c868feae8fdfd7178b660e024dbc018
+_md5_=a1d287125b6c9f7d7e5af660ac609aeb
